<resources>
    <string name="app_name">ProductivityApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lesson_title">Въведете име на лекцията</string>
    <string name="no_course_in_the_database_create_new_one_by_clicking_the_add_button_at_the_top_right">Списъкът е празен</string>
    <string name="all_lessons" />
    <string name="empty_fields_message" />
    <string name="course_deleted_successfully" />
    <string name="lesson_deleted_successfully">Deleted Successfully</string>
    <string name="course_name" />
    <string name="select_a_course" />

    <string name="register">Регистриране</string>
    <string name="login_email_hint">Имейл</string>
    <string name="login_password_hint">Парола</string>
    <string name="signup_login_hint">Имате акаунт? Влизане</string>
    <string name="login_signup_hint">Нямате акаунт? Регистрация</string>
    <string name="logout">Излез</string>
    <string name="userName">Потребителско име</string>
    <string name="registerUser">Регистриране</string>
</resources>